fix popup window z-index on request.html

--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -150,6 +150,10 @@
   width: 22px;
   top: 50%;
   transform: translateY(-50%);
+  &--untransformed {
+    transform: none;
+    margin-top: -11px;
+  }
 }
 
 .modal__select-wrapper .icon__date-svg {
